--- a/final_proj/src/main/webapp/res/css/my.login.css
+++ b/final_proj/src/main/webapp/res/css/my.login.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 .my-login-option-wrap {
     height: 20px;
     position: relative;
@@ -23,7 +24,7 @@
     right: 0;
 }
 
-#saveid {
+#my-login-saveid {
     margin: 0;
     transform: scale(1.2);
 }
@@ -51,6 +52,7 @@
 
 .my-login-loginbtn-txt {
     font-size: 1.2em;
+    font-weight: 700;
     display: inline-block;
     color: white;
     vertical-align: middle;
@@ -59,4 +61,11 @@
 .my-login-hr {
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
     margin-bottom: 5px;
+}
+
+.my-login-id-info, .my-login-pw-info {
+    display: none;
+    text-align: center;
+    color: red;
+    margin-bottom: 20px;
 }
