--- a/final_proj/src/main/webapp/res/css/my.register.css
+++ b/final_proj/src/main/webapp/res/css/my.register.css
@@ -65,7 +65,7 @@ button.my-register-regbtn {
     color: white;
 }
 
-#my-register-email-info {
+#my-register-email-label {
     width: 99%;
     display: inline-block;
     text-align: center;
