헤더 및 푸터에 전체 wrap 적용 / 푸터에 플레이어 영역 셋팅

--- a/final_proj/src/main/webapp/res/css/my.common.css
+++ b/final_proj/src/main/webapp/res/css/my.common.css
@@ -16,6 +16,10 @@ body {
     vertical-align: middle;
 }
 
+.my-wrap {
+	positon: relative;
+}
+
 .my-container {
     width: 1060px;
     margin: 0 auto;
