--- a/final_proj/src/main/webapp/res/css/my.submenu.css
+++ b/final_proj/src/main/webapp/res/css/my.submenu.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 .my-submenu-wrap {
     width: 100%;
     padding-bottom: 20px;
@@ -8,6 +6,14 @@
 .my-submenu-container {
     font-size: 0;
     list-style: none;
+}
+
+.my-submenu-menuitem-1 {
+    text-align: center;
+    font-size: 14px;
+    width: 100%;
+    display: inline-block;
+    padding: 14px 0;
 }
 
 .my-submenu-menuitem-2 {
@@ -31,6 +37,14 @@
     text-align: center;
     font-size: 14px;
     width: 25%;
+    display: inline-block;
+    padding: 14px 0;
+}
+
+.my-submenu-menuitem-5 {
+    text-align: center;
+    font-size: 14px;
+    width: 20%;
     display: inline-block;
     padding: 14px 0;
 }
