--- a/final_proj/src/main/webapp/res/css/my.common.css
+++ b/final_proj/src/main/webapp/res/css/my.common.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 * {
     margin: 0;
     padding: 0;
@@ -21,9 +19,12 @@ body {
     margin: 0 auto;
     background-color: white;
 }
+#my-contents-container{
+    margin-bottom: 100px;
+}
 
 .my-sep {
-	background-color: white;
+    background-color: white;
 }
 
 .h20 {
