--- a/final_proj/src/main/webapp/res/css/my.menu.css
+++ b/final_proj/src/main/webapp/res/css/my.menu.css
@@ -1,24 +1,20 @@
-@charset "UTF-8";
-
 li.my-menu-menuitem {
     padding: 0 30px 10px 30px;
     display: inline-block;
     font-size: 1.4em;
+    cursor:pointer;
 }
 
 li.my-menu-menuitem:hover {
 	border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
 }
 
-li.my-menu-menuitem > a, li.my-menu-menuitem > a:visited, li.my-menu-menuitem > a:hover {
-	text-decoration: none;
-}
 
-li.my-menu-menuitem > a, li.my-menu-menuitem > a:visited {
+li.my-menu-menuitem > span {
 	color: rgba(0, 0, 0, 0.4);
 }
 
-li.my-menu-menuitem > a:hover {
+li.my-menu-menuitem:hover > span {
 	color: rgba(0, 0, 0, 0.8);
 }
 
